fixed trending div spacing

--- a/style.css
+++ b/style.css
@@ -44,8 +44,8 @@ header {
 }
 
 .sidebar embed {
-    height: 40px;
-    max-width: 40px;
+    height: 50px;
+    max-width: 50px;
 }
 
 .sidebar p {
@@ -65,6 +65,7 @@ header {
 .sidebar li {
     list-style: none;
     text-decoration: none;
+    padding: 10px;
     font-size: 40px;
 }
 .navbar {
@@ -150,7 +151,7 @@ header {
     display: grid;
     grid-column: span 2;
     grid-template-columns: 3fr 1fr;
-    padding: 50px;
+    padding-top: 50px;
 }
 
 .main h1 {
@@ -170,15 +171,11 @@ header {
 }
 .card {
     display: grid;
-    padding: 15px;
     background-color: white;
     border-radius: 10px;
     border-left: 0.5em solid orange;
     box-shadow: 1px 3px 10px #888888;
-}
-.card p {
-    display: grid;
-    padding-bottom: 3em;
+    padding: 15px;
 }
 
 /*card SVG css */
@@ -214,27 +211,30 @@ header {
     font-size: 15px;
 }
 
-/* last li in announcement made bold */
-
 /* really hacky way to give a line between paragraphs */
 .trending.announcements,
 .trending.announcements strong {
     border: none;
+    font-size: 30px;
 }
 
 .trending div {
     display: grid;
     grid-template-columns: 30% 30%;
+    padding: 10px;
+    gap: 15px;
+    max-width: fit-content;
 }
 
 .trending embed {
-    height: 30px;
+    height: 50px;
 }
 
 .right h1 {
     padding: 0;
     display: grid;
 }
+
 .announcements,
 .trending {
     display: grid;
@@ -243,4 +243,5 @@ header {
     background-color: white;
     border-radius: 10px;
     box-shadow: 1px 3px 10px #888888;
+    list-style: none;
 }
